name:                haskell-do-display
version:             0.1.0
synopsis:            Display classes for HaskellDO
description:         See README
homepage:            https://github.com/theam/haskell-do-display#readme
license:             Apache-2.0
license-file:        LICENSE
author:              HaskellDO contributors
maintainer:          hello@theam.io
copyright:           2017 HaskellDO contributors
category:            Editor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Display
  build-depends:       base >= 4.7 && < 5
                     , Frames
                     , Chart
                     , Chart-diagrams
                     , vinyl
                     , blaze-html
                     , blaze-markup
                     , data-default-class 
                     , directory 
                     , text 
                     , aeson
                     , filepath
  other-modules:       DisplayTypes
                     , Displayable
                     , DisplayCharts
                     , DisplayFrames
  default-language:    Haskell2010

test-suite test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-do-display
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theam/haskell-do-display
